k8s/apps/rustpad/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: rustpad
          image: ekzhang/rustpad:latest@sha256:536b63883b2661f31de580df438427f2b799f9284bf9f908708ea3b5d231b585
          ports:
            - containerPort: 3030
          securityContext:
            allowPrivilegeEscalation: false
      restartPolicy: Always
